Replace requestID with requestId
This matches the case used by other FireFly connectors.
